--- a/jours-sans-accident-final.html
+++ b/jours-sans-accident-final.html
@@ -178,7 +178,7 @@
   <div class="last-update" id="lastUpdate"></div>
 
   <script>
-    const DATA_URL = 'https://teyhjkfznulakqidqlja.supabase.co/storage/v1/object/public/Chapel-contenus/accidents-dates.txt';
+    const DATA_URL = 'https://chapel-hydraulique.github.io/chapel-contents/accidents-dates.txt';
 
     let accidentData = [];
 
